--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -10,6 +10,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
+        cache: 'pip'
         architecture: 'x64'
     - name: Install package
       run: |
