--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -10,6 +10,7 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+        cache: 'pip'
         architecture: 'x64'
     - name: Install ruff
       run: |
