--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ write_to = "asreviewcontrib/models/_version.py"
 "dynamic-nn" = "asreviewcontrib.models.classifiers:DynamicNNClassifier"
 
 [tool.ruff]
-select = ["E", "F", "UP", "I", "B"]
+select = ["E", "F", "UP", "B"]
 
 [tool.ruff.isort]
 force-single-line = true
