--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ build-backend = 'setuptools.build_meta'
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 
 [tool.setuptools]
-packages = ["asreviewcontrib"]
+packages = ["asreviewcontrib", "asreviewcontrib.models"]
 
 [tool.setuptools_scm]
 write_to = "asreviewcontrib/models/_version.py"
