Update test.yml package installation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
       - name: Intall packages
         run: |
           pip install pytest
+          pip install asreview
       - name: Run Test
         run: |
           pytest tests/test_models_2.py
