--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,7 +4,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
@@ -14,4 +14,4 @@ jobs:
           pip install asreview
       - name: Run Test
         run: |
-          pytest tests/test_models_2.py
+          pytest tests -v
