--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,6 +12,7 @@ jobs:
         run: |
           pip install pytest
           pip install asreview
+          pip install tf-keras
           pip install .
       - name: Run Test
         run: |
