--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,10 +39,10 @@ build-backend = 'setuptools.build_meta'
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 
 [tool.setuptools]
-packages = ["asreviewcontrib", "asreviewcontrib.models"]
+packages = ["asreviewcontrib", "asreviewcontrib.models", "asreviewcontrib.nemo"]
 
 [tool.setuptools_scm]
-write_to = "asreviewcontrib/models/_version.py"
+write_to = "asreviewcontrib/nemo/_version.py"
 
 [project.entry-points."asreview.models.classifiers"]
 "xgboost" = "asreviewcontrib.models.classifiers:XGBoost"
