--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ keywords = ["systematic review"]
 requires-python = ">=3.8"
 dynamic = ["version"]
 dependencies = [
-    "asreview>=2",
+    "asreview==2.0a3",
     "xgboost",
     "sentence_transformers",
     "gensim",
@@ -45,16 +45,16 @@ packages = ["asreviewcontrib", "asreviewcontrib.nemo_models", "asreviewcontrib.n
 write_to = "asreviewcontrib/nemo/_version.py"
 
 [project.entry-points."asreview.models.classifiers"]
-"xgboost" = "asreviewcontrib.nemo_models.classifiers:XGBoost"
-"nn-2-layer" = "asreviewcontrib.nemo_models.classifiers:NN2LayerClassifier"
-"adaboost" = "asreviewcontrib.nemo_models.classifiers:AdaBoost"
-"dynamic-nn" = "asreviewcontrib.nemo_models.classifiers:DynamicNNClassifier"
+"adaboost" = "asreviewcontrib.nemo_models.classifiers.adaboost:AdaBoost"
+"dynamic-nn" = "asreviewcontrib.nemo_models.classifiers.dynamic_nn:DynamicNNClassifier"
+"nn-2-layer" = "asreviewcontrib.nemo_models.classifiers.nn_2_layer:NN2LayerClassifier"
+"xgboost" = "asreviewcontrib.nemo_models.classifiers.xgboost:XGBoost"
 
 [project.entry-points."asreview.models.feature_extraction"]
-"sbert" = "asreviewcontrib.nemo_models.feature_extraction:SBERT"
-"doc2vec" = "asreviewcontrib.nemo_models.feature_extraction:Doc2Vec"
-"mxbai" = "asreviewcontrib.nemo_models.feature_extraction:MXBAI"
-"labse" = "asreviewcontrib.nemo_models.feature_extraction:LaBSE"
+"sbert" = "asreviewcontrib.nemo_models.feature_extraction.sbert:SBERT"
+"doc2vec" = "asreviewcontrib.nemo_models.feature_extraction.doc2vec:Doc2Vec"
+"mxbai" = "asreviewcontrib.nemo_models.feature_extraction.mxbai:MXBAI"
+"labse" = "asreviewcontrib.nemo_models.feature_extraction.labse:LaBSE"
 
 [project.entry-points."asreview.entry_points"]
 nemo = "asreviewcontrib.nemo.entrypoint:NemoEntryPoint"
