--- a/.gitignore
+++ b/.gitignore
@@ -160,4 +160,7 @@ cython_debug/
 #.idea/
 
 # Setup Tools SCM
-asreviewcontrib/models/_version.py
+asreviewcontrib/nemo/_version.py
+
+# vscode
+.vscode/settings.json
