--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,17 +8,16 @@ authors = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12"
 ]
 keywords = ["systematic review"]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dynamic = ["version"]
 dependencies = [
-    "asreview==2.0a3",
+    "asreview>=2.0b0",
     "xgboost",
     "sentence_transformers",
     "gensim",
@@ -26,7 +25,7 @@ dependencies = [
     "scikeras",
     "scikit-learn",
     "tensorflow",
-    "scipy==1.12",
+    "scipy",
     "tf-keras"
 ]
 
@@ -39,22 +38,22 @@ build-backend = 'setuptools.build_meta'
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 
 [tool.setuptools]
-packages = ["asreviewcontrib", "asreviewcontrib.nemo_models", "asreviewcontrib.nemo"]
+packages = ["asreviewcontrib", "asreviewcontrib.nemo", "asreviewcontrib.nemo.classifiers", "asreviewcontrib.nemo.feature_extractors"]
 
 [tool.setuptools_scm]
 write_to = "asreviewcontrib/nemo/_version.py"
 
 [project.entry-points."asreview.models.classifiers"]
-"adaboost" = "asreviewcontrib.nemo_models.classifiers.adaboost:AdaBoost"
-"dynamic-nn" = "asreviewcontrib.nemo_models.classifiers.dynamic_nn:DynamicNNClassifier"
-"nn-2-layer" = "asreviewcontrib.nemo_models.classifiers.nn_2_layer:NN2LayerClassifier"
-"xgboost" = "asreviewcontrib.nemo_models.classifiers.xgboost:XGBoost"
+"adaboost" = "asreviewcontrib.nemo.classifiers.adaboost:AdaBoost"
+"dynamic-nn" = "asreviewcontrib.nemo.classifiers.dynamic_nn:DynamicNNClassifier"
+"nn-2-layer" = "asreviewcontrib.nemo.classifiers.nn_2_layer:NN2LayerClassifier"
+"xgboost" = "asreviewcontrib.nemo.classifiers.xgboost:XGBoost"
 
-[project.entry-points."asreview.models.feature_extraction"]
-"sbert" = "asreviewcontrib.nemo_models.feature_extraction.sbert:SBERT"
-"doc2vec" = "asreviewcontrib.nemo_models.feature_extraction.doc2vec:Doc2Vec"
-"mxbai" = "asreviewcontrib.nemo_models.feature_extraction.mxbai:MXBAI"
-"labse" = "asreviewcontrib.nemo_models.feature_extraction.labse:LaBSE"
+[project.entry-points."asreview.models.feature_extractors"]
+"sbert" = "asreviewcontrib.nemo.feature_extractors.sbert:SBERT"
+"doc2vec" = "asreviewcontrib.nemo.feature_extractors.doc2vec:Doc2Vec"
+"mxbai" = "asreviewcontrib.nemo.feature_extractors.mxbai:MXBAI"
+"labse" = "asreviewcontrib.nemo.feature_extractors.labse:LaBSE"
 
 [project.entry-points."asreview.entry_points"]
 nemo = "asreviewcontrib.nemo.entrypoint:NemoEntryPoint"
@@ -64,3 +63,7 @@ select = ["E", "F", "UP", "B"]
 
 [tool.ruff.isort]
 force-single-line = true
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["tests"]
