--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,12 @@ authors = [
 classifiers = [
     "Development Status :: 4 - Beta",
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12"
 ]
 keywords = ["systematic review"]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
     "asreview>=2.0b0",
@@ -24,9 +23,8 @@ dependencies = [
     "numpy",
     "scikeras",
     "scikit-learn",
-    "tensorflow",
-    "scipy",
-    "tf-keras"
+    "keras>=3.0.0",
+    "torch"
 ]
 
 [project.urls]
