--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ write_to = "asreviewcontrib/nemo/_version.py"
 "dynamic-nn" = "asreviewcontrib.nemo.classifiers.neural_networks:DynamicNNClassifier"
 "nn-2-layer" = "asreviewcontrib.nemo.classifiers.neural_networks:NN2LayerClassifier"
 "xgboost" = "asreviewcontrib.nemo.classifiers.xgboost:XGBoost"
+"scaled-nb" = "asreviewcontrib.nemo.classifiers.scaled_nb:ScaledNaiveBayes"
 
 [project.entry-points."asreview.models.feature_extractors"]
 "doc2vec" = "asreviewcontrib.nemo.feature_extractors.doc2vec:Doc2VecWrapper"
