--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,8 @@ requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
     "asreview>=2.0b5",
-    "gensim>=4.3.3",
     "keras>=3.8.0",
-    "numpy>=1.26.4",
+    "numpy",
     "scikit-learn>=1.6.1",
     "sentence-transformers>=3.4.1",
     "accelerate>=1.0.0",
@@ -49,7 +48,6 @@ write_to = "asreviewcontrib/nemo/_version.py"
 "xgboost" = "asreviewcontrib.nemo.classifiers.xgboost:XGBoost"
 
 [project.entry-points."asreview.models.feature_extractors"]
-"doc2vec" = "asreviewcontrib.nemo.feature_extractors.doc2vec:Doc2VecWrapper"
 "sbert" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:SBERT"
 "mxbai" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:MXBAI"
 "labse" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:LaBSE"
