--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ASReview-NEMO"
+name = "ASReview-Dory"
 description = "ASReview New Exciting Models"
 readme = "README.md"
 authors = [
@@ -27,35 +27,35 @@ dependencies = [
 ]
 
 [project.urls]
-Issues = "https://github.com/asreview/asreview-nemo/issues"
-Repository = "https://github.com/asreview/asreview-nemo/"
+Issues = "https://github.com/asreview/asreview-dory/issues"
+Repository = "https://github.com/asreview/asreview-dory/"
 
 [build-system]
 build-backend = 'setuptools.build_meta'
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 
 [tool.setuptools]
-packages = ["asreviewcontrib", "asreviewcontrib.nemo", "asreviewcontrib.nemo.classifiers", "asreviewcontrib.nemo.feature_extractors"]
+packages = ["asreviewcontrib", "asreviewcontrib.dory", "asreviewcontrib.dory.classifiers", "asreviewcontrib.dory.feature_extractors"]
 
 [tool.setuptools_scm]
-write_to = "asreviewcontrib/nemo/_version.py"
+write_to = "asreviewcontrib/dory/_version.py"
 
 [project.entry-points."asreview.models.classifiers"]
-"adaboost" = "asreviewcontrib.nemo.classifiers.adaboost:AdaBoost"
-"dynamic-nn" = "asreviewcontrib.nemo.classifiers.neural_networks:DynamicNNClassifier"
-"nn-2-layer" = "asreviewcontrib.nemo.classifiers.neural_networks:NN2LayerClassifier"
-"warmstart-nn" = "asreviewcontrib.nemo.classifiers.neural_networks:WarmStartNNClassifier"
-"xgboost" = "asreviewcontrib.nemo.classifiers.xgboost:XGBoost"
+"adaboost" = "asreviewcontrib.dory.classifiers.adaboost:AdaBoost"
+"dynamic-nn" = "asreviewcontrib.dory.classifiers.neural_networks:DynamicNNClassifier"
+"nn-2-layer" = "asreviewcontrib.dory.classifiers.neural_networks:NN2LayerClassifier"
+"warmstart-nn" = "asreviewcontrib.dory.classifiers.neural_networks:WarmStartNNClassifier"
+"xgboost" = "asreviewcontrib.dory.classifiers.xgboost:XGBoost"
 
 [project.entry-points."asreview.models.feature_extractors"]
-"sbert" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:SBERT"
-"mxbai" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:MXBAI"
-"labse" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:LaBSE"
-"multilingual-e5-large" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:MultilingualE5Large"
-"gtr-t5-large" = "asreviewcontrib.nemo.feature_extractors.sentence_transformers:GTR"
+"sbert" = "asreviewcontrib.dory.feature_extractors.sentence_transformers:SBERT"
+"mxbai" = "asreviewcontrib.dory.feature_extractors.sentence_transformers:MXBAI"
+"labse" = "asreviewcontrib.dory.feature_extractors.sentence_transformers:LaBSE"
+"multilingual-e5-large" = "asreviewcontrib.dory.feature_extractors.sentence_transformers:MultilingualE5Large"
+"gtr-t5-large" = "asreviewcontrib.dory.feature_extractors.sentence_transformers:GTR"
 
 [project.entry-points."asreview.entry_points"]
-nemo = "asreviewcontrib.nemo.entrypoint:NemoEntryPoint"
+dory = "asreviewcontrib.dory.entrypoint:DoryEntryPoint"
 
 [tool.ruff]
 select = ["E", "F", "UP", "B"]
