Fix package name (convert to lowercase)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "ASReview-Dory"
+name = "asreview-dory"
 description = "ASReview New Exciting Models"
 readme = "README.md"
 authors = [
