--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,16 +1,26 @@
 name: Install Package
-on: [push,pull_request]
+
+on: [push, pull_request]
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: ["3.10", "3.13"]
+    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: '3.11'
-        architecture: 'x64'
-    - name: Install package and run test
-      run: |
-        pip install .
-        pip install pytest
-        pytest tests -v
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: "x64"
+
+      - name: Install package and run tests
+        run: |
+          pip install .
+          pip install pytest
+          pytest tests -v
