--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -9,6 +9,11 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.10", "3.13"]
+        architecture: 
+          ubuntu-latest: [x64]
+          windows-latest: [x64]
+          macos-latest: [arm64]
+
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
 
     steps:
@@ -17,7 +22,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          architecture: "x64"
+          architecture: ${{ matrix.architecture }}
 
       - name: Install package and run tests
         run: |
