--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -7,14 +7,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.10", "3.13"]
-        architecture: 
-          ubuntu-latest: [x64]
-          windows-latest: [x64]
-          macos-latest: [arm64]
-
-    name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
+        architecture: [x64]
+    name: Python ${{ matrix.python-version }} on ${{ matrix.os }} with architecture ${{ matrix.architecture }}
 
     steps:
       - uses: actions/checkout@v4
@@ -23,6 +19,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.architecture }}
+
+      - name: Set architecture to arm64 on macOS
+        if: runner.os == 'macOS'
+        run: echo "architecture=arm64" >> $GITHUB_ENV
 
       - name: Install package and run tests
         run: |
