--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = ["systematic review"]
 requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
-    "asreview>=2.0b5",
+    "asreview>=2.0rc1",
     "keras>=3.8.0",
     "numpy",
     "scikit-learn>=1.6.1",
