--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,22 +27,13 @@ jobs:
           pytest tests -v
 
   macos-arm64:
-    runs-on: macos-latest
+    runs-on: macos-13
     strategy:
       matrix:
         python-version: ["3.10"] # No 3.13 for now
     name: Python ${{ matrix.python-version }} on macOS with arm64 architecture
 
     steps:
-      - name: Upgrade brew
-        run: |
-          brew upgrade
-
-      - name: Install gettext
-        run: |
-          brew install gettext
-          brew link gettext --force --overwrite
-
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
