--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,3 +25,28 @@ jobs:
           pip install .
           pip install pytest
           pytest tests -v
+
+  macos-arm64:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ["3.11"] # No 3.13 for now
+    name: Python ${{ matrix.python-version }} on macOS with arm64 architecture
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: "arm64"
+
+      - name: Upgrade pip, setuptools, wheel
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+
+      - name: Install package and run tests
+        run: |
+          pip install .
+          pip install pytest
+          pytest tests -v
