--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -3,10 +3,10 @@ name: Install Package
 on:
   push:
     branches:
-    - master
+    - main
   pull_request:
     branches:
-    - master
+    - main
 
 jobs:
   build:
