--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -16,7 +17,7 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
     "Topic :: Text Processing :: General",
 ]
-keywords = ["systematic review"]
+license = {text = "MIT"}
 requires-python = ">=3.10"
 dynamic = ["version"]
 dependencies = [
@@ -32,8 +33,9 @@ dependencies = [
 ]
 
 [project.urls]
-Issues = "https://github.com/asreview/asreview-dory/issues"
+Homepage = "https://asreview.ai"
 Repository = "https://github.com/asreview/asreview-dory/"
+Issues = "https://github.com/asreview/asreview-dory/issues"
 
 [build-system]
 build-backend = 'setuptools.build_meta'
